# edown

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  docs.yml  publish.yml  smoke-live-gee.yml
docs/: api.md  cli.md  concepts.md  getting-started.md  index.md  manifest.md
docs/examples/: aoi.geojson
examples/: s2_find_download_stack.py
src/edown/: __init__.py  aoi.py  auth.py  cli.py  constants.py  discovery.py  download.py  errors.py  grid.py  logging_utils.py  manifest.py  models.py  plugins.py  progress.py  stack.py  utils.py
tests/: __init__.py  conftest.py  test_aoi.py  test_auth.py  test_cli.py  test_discovery.py  test_download.py  test_download_runtime.py  test_grid.py  test_live_s2.py  test_manifest.py  test_progress.py  test_stack.py
